simplify character rig, arm poses and jump state